<resources>
    <string name="app_name">Represent</string>
    <string name="action_settings">Settings</string>
    <string name="represent_logo">represent_logo</string>
    <string name="zip_code">Enter Zip Code</string>
    <string name="or">OR</string>
    <string name="use_location">Use Location</string>
    <string name="congressional_view_title">Congressional Representatives for</string>
    <string name="representatitve">Representative</string>
    <string name="democrat">(D)</string>
    <string name="lee_name">Barbara Lee</string>
    <string name="email">Send an email</string>
    <string name="website">Visit their website</string>
    <string name="more_info">View more info</string>
    <string name="feinstein_name">Dianne Feinstein</string>
    <string name="boxer_name">Barbara Boxer</string>
    <string name="senator">Senator</string>
    <string name="end_of_term">End of Term:</string>
    <string name="lee_end_of_term">January 3, 2017</string>
    <string name="committees">Committees:</string>
    <string name="appropriations">Appropriations</string>
    <string name="budget">Budget</string>
    <string name="bills_sponsored">Bills Sponsored:</string>
    <string name="bill1">Improving Access to Mental Health Act</string>
    <string name="bill1_details">H.R. 3712 (10/8/2015)</string>
    <string name="bill2">Recognizing the 70th anniversary of the establishment of the United Nations</string>
    <string name="bill2_details">H.Con.Res 77 (9/16/2015)</string>
    <string name="more">More</string>
    <string name="detailed_view_title">Detailed View</string>
    <string name="feinstein_end_of_term">January 3, 2019</string>
    <string name="intelligence">Select Committee on Intelligence</string>
    <string name="feinstein_bill1">California Desert Conservation, Off-Road Recreation, and Renewable Energy Act</string>
    <string name="feinstein_bill1_details">S. 2568 (2/23/2016)</string>
    <string name="feinstein_bill2">Interstate Threats Clarification Act of 2016</string>
    <string name="feinstein_bill2_details">S. 2552 (2/11/2016)</string>
    <string name="boxer_end_of_term">January 3, 2017</string>
    <string name="ethics">Select Committee on Ethics</string>
    <string name="environment">Environment and Public Works</string>
    <string name="boxer_bill1">Female Veteran Suicide Prevention Act</string>
    <string name="boxer_bill1_details">S. 2487 (2/3/2016)</string>
    <string name="boxer_bill2">Tule Lake National Historic Site Establishment Act of 2015</string>
    <string name="boxer_bill2_details">S. 2412 (12/17/2015)</string>
    <string name="judiciary">Judiciary</string>
    <string name="rules">Rules and Administration</string>
    <string name="foreign">Foreign Relations</string>
    <string name="feinstein_bill3">California Long-Term Provisions for Water Supply and Short-Term Provisions for Emergency Drought Relief Act</string>
    <string name="feinstein_bill3_details">S. 2533 (2/10/2016)</string>
    <string name="lee_bill3">Equal Access to Abortion Coverage in Health Insurance (EACH Woman) Act of 2015</string>
    <string name="lee_bill3_details">H.R. 2972 (7/8/2015)</string>
    <string name="boxer_bill3">End of Suffering Act of 2015</string>
    <string name="boxer_bill3_details">S. 2204 (10/22/2015)</string>
</resources>
