<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/relative_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lee"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:id="@+id/photo"
            android:paddingBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_below="@+id/photo"
            android:id="@+id/title"
            android:text="@string/representatitve"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/name"
            android:text="@string/lee_name"
            android:layout_toEndOf="@+id/title"
            android:textColor="#000000"
            android:layout_below="@+id/photo"
            android:paddingLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/party"
            android:layout_toEndOf="@+id/name"
            android:text="@string/democrat"
            android:textColor="#0011ff"
            android:layout_below="@+id/photo"
            android:paddingLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/end_of_term"
            android:text="@string/end_of_term"
            android:textColor="#000000"
            android:layout_below="@+id/title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/date"
            android:text="@string/lee_end_of_term"
            android:textColor="#000000"
            android:layout_toEndOf="@id/end_of_term"
            android:layout_below="@+id/title"
            android:paddingLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/committees"
            android:text="@string/committees"
            android:textColor="#000000"
            android:layout_below="@+id/end_of_term"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_below="@+id/committees"
            android:id="@+id/committee1"
            android:text="@string/appropriations"
            android:paddingLeft="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_below="@+id/committee1"
            android:id="@+id/committee2"
            android:text="@string/budget"
            android:paddingLeft="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_below="@+id/committee2"
            android:id="@+id/bills_sponsored"
            android:text="@string/bills_sponsored"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_below="@+id/bills_sponsored"
            android:id="@+id/bill1"
            android:text="@string/bill1"
            android:paddingLeft="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#7e7e7e"
            android:layout_below="@+id/bill1"
            android:id="@+id/bill1_details"
            android:text="@string/bill1_details"
            android:paddingLeft="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_below="@+id/bill1_details"
            android:id="@+id/bill2"
            android:text="@string/bill2"
            android:paddingLeft="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#7e7e7e"
            android:layout_below="@+id/bill2"
            android:id="@+id/bill2_details"
            android:text="@string/bill2_details"
            android:paddingLeft="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_below="@+id/bill2_details"
            android:id="@+id/more"
            android:text="@string/more"
            android:layout_centerInParent="true"
            android:clickable="true"/>

    </RelativeLayout>

</ScrollView>